--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.11.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "morgan": "^1.10.0",
     "prisma": "^6.11.1",
     "uuid": "^11.1.0"
