--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "jest",
     "db:migrate": "npx prisma migrate dev --schema src/infrastructure/prisma",
     "db:studio": "npx prisma studio --schema src/infrastructure/prisma",
